# EPITECH_CPP_CI

./: CMakeLists.txt  conanfile.py
.github/scripts/: add_env.ps1  build_project.sh  devenv.js
.github/workflows/: auto_builder.yml
include/: mymath.hpp
src/: main.cpp  mymath.cpp
tests/: CMakeLists.txt  test_main.cpp
